# AutoPyDoc

./: .gitignore  README.md  action.yml  autopydoc.yml.example  pyproject.toml  repos.db
src/: .env.example  code_representation.py  config.ini  docstring_builder.py  docstring_dismantler.py  docstring_input_selector.py  extract_affected_code_from_change_info.py  extract_methods_from_change_info.py  extract_outdated_ids.py  get_context.py  gpt_input.py  gpt_interface.py  helpers.py  import_finder.py  lint_externally.py  main.py  main_cli.py  repo_controller.py  save_data.py  test_file_new.py  test_file_old.py  validate_docstring.py  validate_docstring_input.py
src/experiments/: ast_tests.py  code_representation.py  create_ast.py  create_callgraph.py  testfile.py  tests2.py  tests3.py  tests4.py  tests5.py
src/models/: __init__.py  deepseek_r1_local.py  model_factory.py  model_strategy.py  strategy_deepseek_olama.py  strategy_deepseek_r1_local.py  strategy_google_gemini.py  strategy_mock.py
src/models/prompt_builder/: deepseek_r1_prompt_builder.py
src/test/: test_code_representation.py  test_docstring_builder.py  test_docstring_dismantler.py  test_docstring_input_selector.py  test_extract_affected_code_from_change_info.py  test_get_context.py  test_gpt_input.py  test_gpt_interface.py  test_import_finder.py  test_main.py  test_repo_controller.py  test_validate_docstring.py  test_validate_docstring_input.py
src/test/test_data/src/: fourth_file.py  main.py  second_file.py  third_file.py
src/tests/: test_code_representation.py
