[project]
dependencies = [
  "astunparse>=1.6.3",
  "configparser>=7.1.0",
  "coverage>=7.7.1",
  "gitpython>=3.1.44",
  "gpt4all>=2.8.2",
  "json5>=0.10.0",
  "ollama>=0.4.7",
  "pygithub>=2.6.1",
  "pytest>=8.3.5",
  "python-dotenv>=1.0.1",
  "regex>=2024.11.6",
  "restructuredtext-lint>=1.4.0",
  "validators>=0.34.0",
]
description = "Tool to automatically generate and update docstrings for Python code for use in GitHub Actions."
name = "autopydoc"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "ruff>=0.9.9",
]

[tool.ruff]
line-length = 100
